@@ -1,3 +1,12 @@
+2007-09-12  Brady Eidson  <beidson@apple.com>
+
+        Reviewed by Darin
+
+        <rdar://problem/5474753> - ASSERT in IconDatabase ReadySQLStatement
+
+        * loader/icon/IconDatabase.cpp:
+        (WebCore::readySQLStatement): This is a LOG_ERROR situation, not really an ASSERT situation
+
 2007-09-12  Adam Roben  <aroben@apple.com>
 
         Don't ask SafariTheme to draw focus rings around text controls
